# ChaosTheory

./: .gitignore  CMakeLists.txt  ChaosTheory.sln  README.md  config.json
ChaosTheory/: ChaosTheory.vcxproj  ChaosTheory.vcxproj.filters  Game.cpp  Game.h  main.cpp
script/: build.bat  build_advanced.bat  clean.bat  init.bat  install.bat  run.bat  test.bat
src/: CMakeLists.txt  main.cpp
src/core/: Application.cpp  Application.h  AssetManager.cpp  AssetManager.h  AudioManager.cpp  AudioManager.h  Background.cpp  Background.h  CMakeLists.txt  InputManager.cpp  InputManager.h  LogManager.cpp  LogManager.h  ResolutionScaleManager.cpp  ResolutionScaleManager.h  Settings.cpp  Settings.h  SettingsManager.cpp  SettingsManager.h  WindowManager.cpp  WindowManager.h  version.h
src/core/common/: ConfigLoader.cpp  ConfigLoader.h  Macros.h  SettingModes.h  UIPresets.h
src/core/scenes/: GameScene.cpp  GameScene.h  MainMenuScene.cpp  MainMenuScene.h  Scene.h  SceneFactory.cpp  SceneFactory.h  SceneManager.cpp  SceneManager.h  SceneTransitionManager.cpp  SceneTransitionManager.h  SettingsScene.cpp  SettingsScene.h  SplashScene.cpp  SplashScene.h
src/core/scenes/assets/: MainMenuAssets.h  SettingsAssets.h  SplashAssets.h
src/core/ui/: Button.cpp  Button.h  GroupBox.cpp  GroupBox.h  RadioButton.cpp  RadioButton.h  RoundedButton.cpp  RoundedButton.h  UIArrow.cpp  UIArrow.h  UIButton.cpp  UIButton.h  UIElement.h  UIFactory.cpp  UIFactory.h  UIGroupBox.cpp  UIGroupBox.h  UIManager.cpp  UIManager.h  UISelectableButton.cpp  UISelectableButton.h  UISlider.cpp  UISlider.h  UITextLabel.cpp  UITextLabel.h  UIToastMessage.cpp  UIToastMessage.h
test/: AssetManagerTest.cpp  AudioManagerTest.cpp  BackgroundTest.cpp  ButtonTest.cpp  CMakeLists.txt  InputManagerTest.cpp  LogManagerTest.cpp  RadioButtonTest.cpp  SceneFactoryTest.cpp  SceneManagerTest.cpp  SceneTransitionManagerTest.cpp  SettingsManagerTest.cpp  UIArrowTest.cpp  UIButtonTest.cpp  UIFactoryTest.cpp  UIGroupBoxTest.cpp  UIManagerTest.cpp  UISelectableButtonTest.cpp  UISliderTest.cpp  UITextLabelTest.cpp  WindowManagerTest.cpp  main_test.cpp
test/common/: DummyScene.h  LogTestEnvironment.h  TestHelpers.h
